feat: downgrade Java version and enhance audio processing
- Downgraded from Java 25 to Java 21 across all configuration files (Dockerfile, pom.xml, GitHub workflow)
- Updated Maven installation to use version 3.9.11 downloaded directly from Apache
- Improved MP3 file handling with better duration detection and full song processing
- Adjusted difficulty levels and note generation parameters for more balanced gameplay
- Removed deprecated jsminim.jar dependency and updated to newer jaudiotagger library